Added login and signup
